<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/viaje_express"
            android:textColor="@color/purple_700"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="503dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvSelectOpcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/seleccione_la_cantidad_de_personas_a_viajar"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="360sp"
        android:layout_height="50sp"
        android:layout_marginBottom="453dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvCantTickets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cantidad_de_tickets"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCantTickets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/_1"
            android:textSize="16sp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="404dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvMedioTrans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/escoga_una_opci_n_de_transporte"
            android:gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="360sp"
        android:layout_height="90sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rbAvion"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/avion"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbBus"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/bus"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbTaxi"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/taxi_express"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="264dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/tvAlimentacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/alimentaci_n"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="360sp"
        android:layout_height="90sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rbLasagna"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/lasa_a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbPizza"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/pizza"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbHamburguesa"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/hamburguesa"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:layout_marginBottom="124dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <CheckBox
            android:id="@+id/cbPropina"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/desea_incluir_la_propina"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="360sp"
        android:layout_height="50sp"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E4E4E4"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360sp"
        android:layout_height="50sp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <Button
            android:id="@+id/btCalcular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:gravity="center"
            android:text="@string/calcular"
            android:onClick="HallarTotal"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="Limpiar"
            android:gravity="center"
            android:text="@string/limpiar"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>